<resources>
    <string name="app_name">Trafikkfare</string>
    <string name="location">Location</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="profile_picture">Profile picture</string>
    <string name="welcome">Welcome</string>
    <string name="my_location">My Location</string>
    <string name="map">Map</string>
    <string name="danger_title">DangerTitle</string>
    <string name="danger_no">Fare</string>
    <string name="danger_description">Dangerous</string>
    <string name="danger_poster">DangerPoster</string>
    <string name="danger">Fare</string>
    <string name="submit">Submit</string>
    <string name="home_no">Hjem</string>
    <string name="dangers_no">Farer</string>
    <string name="location_no">Sted</string>
    <string name="news_no">Nyheter</string>
    <string name="map_no">Kart</string>
    <string name="profile_no">Profil</string>
    <string name="content_description_profile">Min profil</string>
    <string name="more_no">Mer</string>
    <string name="search_no">Søk</string>
    <string name="content_description_search">Søk</string>
    <string name="content_description_more">Se mer</string>
    <string name="password">Password</string>
    <string name="welcome_back_no">Velkommen tilbake</string>
    <string name="news_list_item_title">Tittel</string>
    <string name="news_list_item_road">Vei</string>
    <string name="news_list_item_county">Fylke</string>
    <string name="news_list_item_description">Beskrivelse</string>
    <string name="up">Up</string>
    <string name="traffic_no">Trafikk</string>
    <string name="test">Test</string>
    <string name="terrain_map_no">Terrengkart</string>
    <string name="hybrid_map_no">Hybridkart</string>
    <string name="buildings_no">Bygninger</string>
    <string name="description_no">Beskrivelse</string>
    <string name="title_no">Tittel</string>
    <string name="edit_no">Rediger</string>
    <string name="edit_image">Edit image</string>
    <string name="save">Save</string>
    <string name="fab">FAB</string>
    <string name="fab_add">FAB add</string>
    <string name="fab_delete">FAB delete</string>
    <string name="minor">Minor</string>
    <string name="major">Major</string>
    <string name="critical">Critical</string>
    <string name="catastrophic">Catastrophic</string>
    <string name="road_no">Vei</string>
    <string name="county_no">Fylke</string>
    <string name="start_date_no">Startdato</string>
    <string name="present_date_no">Nåværende Dato</string>
    <string name="danger_analysis_animals">Analyse av trafikkskiltet</string>
</resources>