<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/profile_no"
        android:contentDescription="@string/content_description_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_no"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/more_no"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />

</menu>