<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoWindowTitle"
        android:hint="@string/title_no"
        android:autofillHints="@string/danger_title"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_marginBottom="2dp"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoWindowDescription"
        android:hint="@string/description_no"
        android:autofillHints="@string/danger_description"
        android:textColorHint="@android:color/black"
        android:textColor="@color/darkRed"
        android:layout_marginBottom="2dp"
        android:textSize="12sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoWindowImage"
        android:src="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/edit_no"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>