<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editDangerLayout"
    android:layout_marginTop="420dp"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDangerTitle"
        android:inputType="text"
        android:hint="@string/title_no"
        android:autofillHints="@string/title_no"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editDangerDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDangerDescription"
        android:inputType="text"
        android:hint="@string/description_no"
        android:autofillHints="@string/description_no"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editDangerRoad"
        app:layout_constraintEnd_toEndOf="@+id/editDangerTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editDangerTitle"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDangerRoad"
        android:inputType="text"
        android:hint="@string/road_no"
        android:autofillHints="@string/road_no"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editDangerCounty"
        app:layout_constraintEnd_toEndOf="@+id/editDangerTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDangerCounty"
        android:inputType="text"
        android:hint="@string/county_no"
        android:autofillHints="@string/county_no"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/editDangerTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDangerTrafficSign"
        android:minHeight="70dp"
        android:adjustViewBounds="true"
        android:minWidth="70dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/editDangerDescription"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editDangerTitle">
    </ImageButton>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/editDangerDescription"
        app:layout_constraintEnd_toEndOf="@+id/editDangerDescription"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editDangerDescription">

        <RadioButton android:id="@+id/severityMinor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/minor"
            android:buttonTint="@color/colorSeverityMinor"
            android:onClick="onActionButtonClicked"/>
        <RadioButton android:id="@+id/severityMajor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/major"
            android:buttonTint="@color/colorSeverityMajor"
            android:onClick="onActionButtonClicked"/>
        <RadioButton android:id="@+id/severityCritical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/critical"
            android:buttonTint="@color/colorSeverityCritical"
            android:onClick="onActionButtonClicked"/>
        <RadioButton android:id="@+id/severityCatastrophic"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/catastrophic"
            android:buttonTint="@color/colorSeverityCatastrophic"
            android:onClick="onActionButtonClicked"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dangerSaveButton"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/darkRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>