<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MapActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="30dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <!-- START REGION: BOTTOM SHEET HEAD -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/bottom_sheet_title"
            android:background="@color/darkRed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_arrow_drop_up_24"
                android:contentDescription="@string/up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
        <!-- END REGION: BOTTOM SHEET HEAD -->

        <!-- START REGION: BOTTOM SHEET SWITCHES -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title">

            <!-- 1: Traffic Switch -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/traffic_no"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/setTrafficLayer"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <!-- 2: Test Switch -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/testButton"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <!-- 3: Test Switch -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/testButton2"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <!-- 4: Test Switch -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/testButton3"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

        </LinearLayout>
        <!-- END REGION: BOTTOM SHEET SWITCHES -->

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>